# netradient

./: .gitmodules  CMakeLists.txt  Makefile  README.md  download-gamepacks.sh  easy-builder  gamepack-manager  install-dlls-msys2-mingw.sh  install-dlls-msys2-mingw32.sh
icons/: Makefile  netradiant.desktop  x-map.xml
include/: CMakeLists.txt  dpkdeps.h  igl.h  iglrender.h  igtkgl.h  irender.h  ishaders.h  itextstream.h  itextures.h
libs/: CMakeLists.txt  bytestreamutils.h  cmdlib.h  eclasslib.h  entitylib.h  fs_path.h  globaldefs.h  pivot.h  property.h  render.h  selectionlib.h  texturelib.h  versionlib.h
radiant/: CMakeLists.txt  brush.cpp  brush.h  brushmanip.cpp  brushtokens.h  brushxml.h  build.cpp  camwindow.cpp  camwindow.h  commands.cpp  console.cpp  console.h  csg.cpp  dialog.cpp  eclass.cpp  eclass_def.cpp  eclass_doom3.cpp  eclass_xml.cpp  entity.cpp  error.cpp  (+41 more)
tools/: CMakeLists.txt
tools/heretic2/common/: inout.c
tools/quake2/qdata_heretic2/common/: cmdlib.c  inout.c
tools/quake2/qdata_heretic2/qcommon/: arrayedlist.h
tools/quake3/: CMakeLists.txt
tools/quake3/common/: trilib.c  unzip.c  unzip.h  vfs.c  vfs.h
tools/quake3/q3data/: 3dslib.c  md3lib.c  p3dlib.c  q3data.c  video.c
tools/quake3/q3map2/: bsp.c  bspfile_abstract.c  convert_bsp.c  convert_map.c  exportents.c  game_oa.h  game_q3rally.h  game_quakelive.h  game_reaction.h  game_tremulous.h  game_warfork.h  game_warsow.h  game_wop.h  help.c  image.c  light.c  light_bounce.c  light_ydnar.c  lightmaps_ydnar.c  portals.c  q3map2.h  shaders.c  surface.c  surface_meta.c  vis.c  writebsp.c
(+84 files in other folders)
